src/lib/snapshots/cviz__snapshot_tests__tests__simple_chain_ascii_handler_chain.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 32
expression: "ascii_snap(&simple_chain_graph(), DetailLevel::HandlerChain, false)"
---
┌────────────────────────────────────┐
│           Service Chains           │
├────────────────────────────────────┤
│[Export: handler] ──> middleware    │
│middleware ── handler ──> srv       │
└────────────────────────────────────┘
