src/lib/snapshots/cviz__snapshot_tests__tests__simple_chain_ascii_host_imports.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&simple_chain_graph(), &host_imports(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌────────────┐             ┌─────┐
 ext:handler ──▶│ middleware │───handler──▶│ srv │
                └────────────┘             └─────┘

Host imports:
  middleware ┊ log
  srv        ┊ handler
