src/lib/snapshots/cviz__snapshot_tests__tests__two_chain_ascii_default.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&two_chain_graph(), &GraphRenderOpts::default(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌─────────┐             ┌──────────┐
 ext:handler ──▶│ mw-http │───handler──▶│ srv-http │
                └─────────┘             └──────────┘


╞══ store ════════════════════════════════════════

              ┌───────┐           ┌────┐
 ext:store ──▶│ cache │───store──▶│ db │
              └───────┘           └────┘
